<resources>
    <string name="app_name">ProjectPlanner</string>
    <string name="start_button">Start Planner</string>
    <string name="placeholder_text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</string>
    <string name="default_task_text">No Activity Scheduled</string>
    <string name="task_name">Activity Name</string>
    <string name="enter_task_name">Enter Task Name</string>
    <string name="description">Description</string>
    <string name="done_button">Done</string>
    <string name="to_text">TO</string>
    <string name="time_text">Time</string>
    <string name="end_time">Ending</string>
    <string name="start_time">Starting</string>
    <string name="date">Date</string>
    <string name="place">Place</string>
    <string name="priority_text">Priority</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_jumpto">Jump too...</string>
    <string name="delete_menu">Delete</string>
</resources>
